# improvisation_musicale

./: .gitignore  README.md  dune-project  improvisation_musicale.opam  run.sh
src/: dune  functions.ml  gui.ml  improvisation_musicale.ml  notes.ml  samplemusic.ml  samples.ml  scores.ml  songs.ml  types.ml
test/: tests_notes.ml
